--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
             <div class="about__inner">
 
                 <h2 class="about__title section-title">About Our Agency</h2>
-                <div class="about__desc">
+                <div class="about__subtitle section-subtitle">
                     <p>
                         We are a new design studio based in USA. 
                         We have over 20 years of combined experience, and know a thing or two about designing websites and mobile apps. 
@@ -81,6 +81,104 @@
 
         </div><!--container-->
     </section><!--сделать плавное увеличение чисел-->
+
+
+    <section class="projects">
+        <div class="projects__background background"></div>
+        
+        <div class="container">
+            <h2 class="projects__title section-title">Best Projects</h2>
+            <span class="projects__subtitle section-subtitle">
+                Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. 
+                Etiam,pellentesque faucibus. 
+                Vestibulum gravida volutpat ipsum non ultrices.
+            </span>
+
+            <div class="projects__list">
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="projects__item">
+                    <div class="project">
+                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <div class="project__overlay">
+                            <h3 class="project__title"></h3>
+                            <span class="project__subtitle"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--container-->
+    </section>
 
     <!-- <script src="js/main.js"></script> -->
 </body>
