--- a/source/index.html
+++ b/source/index.html
@@ -97,7 +97,9 @@
             <div class="projects__list">
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -106,7 +108,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -115,7 +119,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -124,7 +130,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -133,7 +141,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -142,7 +152,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -151,7 +163,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -160,7 +174,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
@@ -169,7 +185,9 @@
                 </div>
                 <div class="projects__item">
                     <div class="project">
-                        <a href="" class="project__link"><img src="" alt="" class="project__img"></a>
+                        <a href="#" class="project__link">
+                            <img src="" alt="" class="project__img">
+                        </a>
                         <div class="project__overlay">
                             <h3 class="project__title"></h3>
                             <span class="project__subtitle"></span>
