write in projects

--- a/source/index.html
+++ b/source/index.html
@@ -98,99 +98,99 @@
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-7-sm.jpg" alt="Vinyl Record" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Vinyl Record</h3>
+                            <span class="project__subtitle">mockup</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-4-sm.jpg" alt="Modern T-Shirt" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Modern T-Shirt</h3>
+                            <span class="project__subtitle">print</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-5-sm.jpg" alt="Minimal Bag" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Minimal Bag</h3>
+                            <span class="project__subtitle">branding</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-9-sm.jpg" alt="Clean & Groovy" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Clean & Groovy</h3>
+                            <span class="project__subtitle">design</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-3-sm.jpg" alt="Minimal Mobile App" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Minimal Mobile App</h3>
+                            <span class="project__subtitle">design</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-8-sm.jpg" alt=">White T-Shirt" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">White T-Shirt</h3>
+                            <span class="project__subtitle">print</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-2-sm.jpg" alt="Business Card" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Business Card</h3>
+                            <span class="project__subtitle">branding</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-6-sm.jpg" alt="Heja Stockholm" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Heja Stockholm</h3>
+                            <span class="project__subtitle">photography</span>
                         </div>
                     </div>
                 </div>
                 <div class="projects__item">
                     <div class="project">
                         <a href="#" class="project__link">
-                            <img src="" alt="" class="project__img">
+                            <img src="image/portfolio/portfolio-12-sm.jpg" alt="Paper Bag" class="project__img">
                         </a>
                         <div class="project__overlay">
-                            <h3 class="project__title"></h3>
-                            <span class="project__subtitle"></span>
+                            <h3 class="project__title">Paper Bag</h3>
+                            <span class="project__subtitle">photography</span>
                         </div>
                     </div>
                 </div>
