--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="libs/slick/slick.css">
     <link rel="stylesheet" href="style/style.css">
     <title>Snow</title>
 </head>
@@ -235,6 +236,8 @@
         </div><!--container-->
     </section>
 
-    <!-- <script src="js/main.js"></script> -->
+    <script src="libs/jquery-3.3.1.min.js"></script>
+    <script src="libs/slick/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
