finished blog section

--- a/source/index.html
+++ b/source/index.html
@@ -273,6 +273,7 @@
                             <a href="#" class="blog-post__link">
                                 <img src="image/post/post-6-mid.jpg" alt="Why you should Always First">
                             </a>
+                            <a href="#" class="blog-post__category">nature</a>
                         </div>
                         <div class="blog-post__content">
                             <h3 class="blog-post__title"><a href="#" class="blog-post__title-link">Why you should Always First</a></h3>
@@ -290,6 +291,7 @@
                             <a href="#" class="blog-post__link">
                                 <img src="image/post/post-1-mid.jpg" alt="Something I need to tell you">
                             </a>
+                            <a href="#" class="blog-post__category">nature</a>
                         </div>
                         <div class="blog-post__content">
                             <h3 class="blog-post__title"><a href="#" class="blog-post__title-link">Something I need to tell you</a></h3>
@@ -307,6 +309,7 @@
                             <a href="#" class="blog-post__link">
                                 <img src="image/post/post-3-mid.jpg" alt="The History of Nature">
                             </a>
+                            <a href="#" class="blog-post__category">nature</a>
                         </div>
                         <div class="blog-post__content">
                             <h3 class="blog-post__title"><a href="#" class="blog-post__title-link">The History of Nature</a></h3>
@@ -324,6 +327,7 @@
                             <a href="#" class="blog-post__link">
                                 <img src="image/post/post-4-mid.jpg" alt="Are you doing the Right Way?">
                             </a>
+                            <a href="#" class="blog-post__category">nature</a>
                         </div>
                         <div class="blog-post__content">
                             <h3 class="blog-post__title"><a href="#" class="blog-post__title-link">Are you doing the Right Way?</a></h3>
@@ -341,6 +345,7 @@
                             <a href="#" class="blog-post__link">
                                 <img src="image/post/post-5-mid.jpg" alt="Ten things about Photography">
                             </a>
+                            <a href="#" class="blog-post__category">nature</a>
                         </div>
                         <div class="blog-post__content">
                             <h3 class="blog-post__title"><a href="#" class="blog-post__title-link">Ten things about Photography</a></h3>
