--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
     </main>
 
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about__inner">
 
@@ -364,7 +364,7 @@
     </section>
 
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
         <div class="container">
             <div class="contacts__inner">
             
