added common filter block instead section filter

--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -18,16 +18,16 @@
         <div class="container">
 
             <div class="projects__filter">
-                <div class="projects-filter">
-                    <div class="projects-filter__toggle js-filter-toggle"></div>
+                <div class="filter">
+                    <div class="filter__toggle js-filter-toggle"></div>
 
-                    <ul class="projects-filter__list">
-                        <li class="projects-filter__item js-filter-category" data-filter="all">all</li>
-                        <li class="projects-filter__item js-filter-category" data-filter="branding">branding</li>
-                        <li class="projects-filter__item js-filter-category" data-filter="print">print</li>
-                        <li class="projects-filter__item js-filter-category" data-filter="photography">photography</li>
-                        <li class="projects-filter__item js-filter-category" data-filter="design">design</li>
-                        <li class="projects-filter__item js-filter-category" data-filter="mockup">mockup</li>
+                    <ul class="filter__list">
+                        <li class="filter__item js-filter-category" data-filter="all">all</li>
+                        <li class="filter__item js-filter-category" data-filter="branding">branding</li>
+                        <li class="filter__item js-filter-category" data-filter="print">print</li>
+                        <li class="filter__item js-filter-category" data-filter="photography">photography</li>
+                        <li class="filter__item js-filter-category" data-filter="design">design</li>
+                        <li class="filter__item js-filter-category" data-filter="mockup">mockup</li>
                     </ul>
                     
                 </div>
