--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
             </h1>
             <button class="main__button button">free download</button>
         </div><!--container-->
-        <div class="scroll-down js-scroll-down"></div>
+        <button class="scroll-down js-scroll-down"></button>
     </main>
 
 
