--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
     <title>Snow | Portfolio</title>
 </head>
-<body class="page">
+<body class="page js-other-page">
 
     //= template/header.html
 
