google lighthouse audit fixes

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Free PSD site template from Unvab">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
     <title>Snow</title>
@@ -23,8 +24,9 @@
                 We are about to change the way <span class="main__title main__title--italic">you publish on the web</span>
             </h1>
             <button class="main__button button">free download</button>
+
         </div><!--container-->
-        <button class="scroll-down js-scroll-down"></button>
+        <button class="scroll-down js-scroll-down" aria-label="Page scroll down"></button>
     </main>
 
 
