--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -19,15 +19,15 @@
 
             <div class="projects__filter">
                 <div class="filter">
-                    <div class="filter__toggle js-filter-toggle"></div>
+                    <div class="filter__toggle js-filter-toggle" onclick=""></div>
 
                     <ul class="filter__list">
-                        <li class="filter__item js-filter-category" data-filter="all">all</li>
-                        <li class="filter__item js-filter-category" data-filter="branding">branding</li>
-                        <li class="filter__item js-filter-category" data-filter="print">print</li>
-                        <li class="filter__item js-filter-category" data-filter="photography">photography</li>
-                        <li class="filter__item js-filter-category" data-filter="design">design</li>
-                        <li class="filter__item js-filter-category" data-filter="mockup">mockup</li>
+                        <li class="filter__item js-filter-category" onclick="" data-filter="all">all</li>
+                        <li class="filter__item js-filter-category" onclick="" data-filter="branding">branding</li>
+                        <li class="filter__item js-filter-category" onclick="" data-filter="print">print</li>
+                        <li class="filter__item js-filter-category" onclick="" data-filter="photography">photography</li>
+                        <li class="filter__item js-filter-category" onclick="" data-filter="design">design</li>
+                        <li class="filter__item js-filter-category" onclick="" data-filter="mockup">mockup</li>
                     </ul>
                     
                 </div>
