attempt to fix iphone #3 added a11y for kb user for filter items

--- a/source/blog.html
+++ b/source/blog.html
@@ -22,10 +22,18 @@
                     <div class="filter__toggle js-filter-toggle" onclick=""></div>
 
                     <ul class="filter__list">
-                        <li class="filter__item js-filter-category" onclick="" data-filter="all">all</li>
-                        <li class="filter__item js-filter-category" onclick="" data-filter="nature">nature</li>
-                        <li class="filter__item js-filter-category" onclick="" data-filter="branding">branding</li>
-                        <li class="filter__item js-filter-category" onclick="" data-filter="design">design</li>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="all">all</a>
+                        </li>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="nature">nature</a>
+                        </li>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="branding">branding</a>
+                        </li>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="design">design</a>
+                        </li>
                     </ul>
                     
                 </div>
