--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -22,23 +22,23 @@
                     <div class="filter__toggle js-filter-toggle" onclick=""></div>
 
                     <ul class="filter__list">
-                        <li>
-                            <a href="#" class="filter__item js-filter-category" onclick="" data-filter="all">all</a>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="all">all</a>
                         </li>
-                        <li>
-                            <a href="#" class="filter__item js-filter-category" onclick="" data-filter="branding">branding</a>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="branding">branding</a>
                         </li>
-                        <li>
-                            <a href="#" class="filter__item js-filter-category" onclick="" data-filter="print">print</a>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="print">print</a>
                         </li>
-                        <li>
-                            <a href="#" class="filter__item js-filter-category" onclick="" data-filter="photography">photography</a>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="photography">photography</a>
                         </li>
-                        <li>
-                            <a href="#" class="filter__item js-filter-category" onclick="" data-filter="design">design</a>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="design">design</a>
                         </li>
-                        <li>
-                            <a href="#" class="filter__item js-filter-category" onclick="" data-filter="mockup">mockup</a>
+                        <li class="filter__item">
+                            <a href="#" class="filter__link js-filter-category" onclick="" data-filter="mockup">mockup</a>
                         </li>
                     </ul>
 
