finished with iphone click bug

--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,6 @@
 </head>
 <body class="page js-main-page">
 
-
     //= template/header.html
 
 
@@ -83,7 +82,7 @@
             </div>
 
         </div><!--container-->
-    </section><!--сделать плавное увеличение чисел-->
+    </section>
 
 
     <section class="projects">
@@ -425,7 +424,6 @@
 
 
     //= template/footer.html
-    
     
     <script src="libs/jquery-3.3.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
