--- a/source/blog.html
+++ b/source/blog.html
@@ -177,5 +177,5 @@
 
     <script src="libs/jquery-3.3.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
