--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -156,6 +156,6 @@
     
     <script src="libs/jquery-3.3.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
